--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: release
 on:
   push:
     tags:
-      - "v*"
+      - "v*.*.*"
 
 jobs:
   release:
@@ -15,10 +15,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+
       - name: Use Go ${{ matrix.node-version }}
         uses: actions/setup-go@v4
         with:
           node-version: ${{ matrix.go-version }}
 
-      - name: build
+      - name: Build
         run: go build -o build/bin/ cmd/cli.go
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: build/bin/cli
+
+      - uses: release-drafter/release-drafter@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
