--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,12 +24,13 @@ jobs:
       - name: Build
         run: go build -o build/bin/ cmd/cli.go
 
+      - name: Create Release
+        uses: release-drafter/release-drafter@v5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: build/bin/cli
-
-      - uses: release-drafter/release-drafter@v5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
