--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,21 +33,8 @@ jobs:
           zip -r linux-aarch64 .
         working-directory: ./artifacts/Linux
 
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-          draft: true
-          prerelease: false
-
+      - name: Release
+        uses: softprops/action-gh-release@v1
     # - name: Create release
     #   id: create_release
     #   uses: actions/create-release@v1
