--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,10 @@ permissions:
 
 jobs:
   release:
+    strategy:
+      matrix:
+        GOOS: ['linux']
+        GOARCH: ['amd64', '386']
     runs-on: ubuntu-latest
 
     strategy:
@@ -32,7 +36,6 @@ jobs:
       - name: Build
         run: |
           GOOS=linux GOARCH=amd64 go build -o artifacts/Linux/amd64/cli cmd/cli/main.go
-        runs-on: ARM64
 
       - name: Zip artifacts
         run: |
